--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="cards">
             <div class="card">
-                <img src="img/projeto-1.jpeg.png" alt="Imagem do jogo da corrida">
+                <a href="google.com" src=""><img src="img/projeto-1.jpeg.png" alt="Imagem do jogo da corrida"></a>
                 <h5>JOGO DA CORRIDA</h5>
                 <p>Esse projeto simula uma corrida divertida entre um carrinho, onde o carrinho desvia dos obstáculos e tenta chegar até o final.</p>
             </div>
