--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="card">
-                <img src="img/projeto-2.jpeg.png" alt="Imagem do efeito monalisa">
+                <a href=https://editor.p5js.org/belisario10/sketches/gvsctcovh" <img src="img/projeto-2.jpeg.png" alt="Imagem do efeito monalisa">
                 <h5>EFEITO MONALISA</h5>
                 <p>Esse projeto cria um efeito visual incrível com círculos que se ajustam para formar a imagem da Mona Lisa. Foi desenvolvido com foco em lógica e visualização.</p>
             </div>
